feat: purchase/buy component added

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-zinc-950">
+  <body class="bg-darkgGray">
     <app-root></app-root>
   </body>
 </html>
