--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="text-white flex flex-col justify-center md:px-56">
+  <body class="text-white flex flex-col justify-center sm:px-9 xl:px-56">
     <app-root></app-root>
   </body>
 </html>
